@@ -63,7 +63,7 @@ endif
 
 CHIP_ASRCS	= 
 CHIP_CSRCS	= stm32_allocateheap.c stm32_start.c stm32_rcc.c stm32_lse.c \
-		  stm32_lsi.c stm32_gpio.c  stm32_exti.c stm32_flash.c stm32_irq.c \
+		  stm32_lsi.c stm32_gpio.c stm32_exti_gpio.c stm32_flash.c stm32_irq.c \
 		  stm32_timerisr.c stm32_dma.c stm32_lowputc.c stm32_serial.c \
 		  stm32_spi.c stm32_sdio.c stm32_tim.c stm32_i2c.c stm32_waste.c
 
@@ -100,6 +100,9 @@ endif
 
 ifeq ($(CONFIG_RTC),y)
 CHIP_CSRCS	+= stm32_rtc.c
+ifeq ($(CONFIG_RTC_ALARM),y)
+CHIP_CSRCS	+= stm32_exti_alarm.c
+endif
 endif
 
 ifeq ($(CONFIG_ADC),y)
